Added List and ListItem elements, not working at the moment

--- a/styles/adwaita.css
+++ b/styles/adwaita.css
@@ -1,5 +1,5 @@
 
-/* Tailwind Playground: https://play.tailwindcss.com/GZy5qCmwS7?size=448x720 */
+/* Tailwind Playground: https://play.tailwindcss.com/xGCn7n3EKl?size=362x720&file=css */
 
 :root {
   --text-color: #fff;
