--- a/examples/index.css
+++ b/examples/index.css
@@ -1,7 +1,5 @@
 .easygui-example-root {
     display: flex;
-    height: 100vh;
-    width: 100vw;
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
@@ -14,4 +12,9 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     justify-items: center;
     gap: 0.75rem;
+}
+
+.easygui-example-list {
+    padding-top: 0.25rem;
+    width: 50%;
 }
