--- a/styles/adwaita.css
+++ b/styles/adwaita.css
@@ -1,4 +1,4 @@
-/* Tailwind Playground: https://play.tailwindcss.com/Eggks5jAOa?size=832x720 */
+/* Tailwind Playground: https://play.tailwindcss.com/rd5D6uAP9d?size=832x720 */
 
 :root {
   --text-color: #fff;
@@ -183,13 +183,13 @@ html {
 }
 
 .nui-list__item:first-child {
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .nui-list__item:last-child {
-  border-bottom-right-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
 }
 
 .nui-list__item:empty {
@@ -208,23 +208,73 @@ html {
   color: var(--text-secondary-color);
 }
 
-/* GENERAL */
-.accent {
+.nui-list__item__prefix {
+  margin-right: 0.5rem;
+}
+
+.nui-list__item__suffix {
+  margin-left: 0.5rem;
+}
+
+button.nui-list__item__prefix, button.nui-list__item__suffix {
+  filter: brightness(1.27);
+}
+
+/* ############# 
+   ## GENERAL ##
+   ############# */
+
+/* ACCENT */
+.nui-accent {
   background-color: var(--accent-color);
 }
 
-.accent:hover:enabled {
+.nui-accent:hover:enabled {
   background-color: var(--accent-hover-color);
 }
 
-.accent:active:enabled {
+.nui-accent:active:enabled {
   background-color: var(--accent-active-color);
 }
 
-h1.accent,
-h2.accent,
-h3.accent,
-h4.accent {
+h1.nui-accent,
+h2.nui-accent,
+h3.nui-accent,
+h4.nui-accent {
   background-color: unset;
   color: var(--accent-color);
+}
+
+/* Gives Accent color only when hovered */
+.nui-accent-hover {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+
+.nui-accent-hover:hover {
+  background-color: var(--accent-color);
+}
+
+h1.nui-accent-hover:hover,
+h2.nui-accent-hover:hover,
+h3.nui-accent-hover:hover,
+h4.nui-accent-hover:hover {
+  background-color: unset;
+  color: var(--accent-color);
+}
+
+/* Alignment */
+
+.nui-align-left {
+  margin-right: auto;
+}
+
+.nui-align-right {
+  margin-left: auto;
+}
+
+.nui-align-center {
+  margin-left: auto;
+  margin-right: auto;
 }
