Added input type str conversions

--- a/styles/adwaita.css
+++ b/styles/adwaita.css
@@ -1,4 +1,4 @@
-/* Tailwind Playground: https://play.tailwindcss.com/rd5D6uAP9d?size=832x720 */
+/* Tailwind Playground: https://play.tailwindcss.com/eCls3Ydbr0?size=636x608 */
 
 :root {
   --text-color: #fff;
